vlib/v/parser/tests/duplicated_generic_err.out
vlib/v/parser/tests/duplicated_generic_err.vv:1:12: error: duplicated generic parameter `A`
    1 | fn test<A, A>() {}
      |            ^
